@@ -1,3 +1,4 @@
+04 Sep 2007 Use integer arithmetic calculating cpupct - Greg
 31 Aug 2007 Catch addr-excp when SIE DAT points outside Mainstore - Ivan Warren
 28 Aug 2007 cckdutil fix for 64-bit - zhackules by Greg
 28 Aug 2007 Fix many TUNSETIFF-EINVAL error messages - Greg
